crates/compiler/yelang-ast/src/test/snapshots/query_engine__ast__test__function_call.snap
---
source: query_engine/src/ast/test/mod.rs
expression: ast
---
Expr {
    kind: Call(
        CallExpr {
            callee: Expr {
                kind: Path(
                    Path {
                        segments: [
                            PathSegment {
                                ident: Ident {
                                    symbol: Symbol(
                                        Spur(1),
                                    ),
                                    span: Span {
                                        start: Position {
                                            line: 1,
                                            column: 1,
                                            absolute: 0,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 4,
                                            absolute: 3,
                                        },
                                    },
                                },
                                args: None,
                            },
                        ],
                        is_absolute: false,
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 1,
                                absolute: 0,
                            },
                            end: Position {
                                line: 1,
                                column: 4,
                                absolute: 3,
                            },
                        },
                    },
                ),
                span: Span {
                    start: Position {
                        line: 1,
                        column: 1,
                        absolute: 0,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                        absolute: 3,
                    },
                },
            },
            args: [
                Positional(
                    Expr {
                        kind: Literal(
                            Int(
                                IntegerLit {
                                    value: Symbol(
                                        Spur(2),
                                    ),
                                    suffix: None,
                                },
                            ),
                        ),
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 1,
                                absolute: 0,
                            },
                            end: Position {
                                line: 1,
                                column: 6,
                                absolute: 5,
                            },
                        },
                    },
                ),
                Positional(
                    Expr {
                        kind: Literal(
                            Int(
                                IntegerLit {
                                    value: Symbol(
                                        Spur(3),
                                    ),
                                    suffix: None,
                                },
                            ),
                        ),
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 1,
                                absolute: 0,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                                absolute: 8,
                            },
                        },
                    },
                ),
            ],
        },
    ),
    span: Span {
        start: Position {
            line: 1,
            column: 1,
            absolute: 0,
        },
        end: Position {
            line: 1,
            column: 10,
            absolute: 9,
        },
    },
}
