crates/compiler/yelang-ast/src/test/snapshots/query_engine__ast__test__precedence_math.snap
---
source: query_engine/src/ast/test/mod.rs
expression: ast
---
Expr {
    kind: Binary(
        BinaryExpr {
            op: Add,
            left: Expr {
                kind: Literal(
                    Int(
                        IntegerLit {
                            value: Symbol(
                                Spur(1),
                            ),
                            suffix: None,
                        },
                    ),
                ),
                span: Span {
                    start: Position {
                        line: 1,
                        column: 1,
                        absolute: 0,
                    },
                    end: Position {
                        line: 1,
                        column: 2,
                        absolute: 1,
                    },
                },
            },
            right: Expr {
                kind: Binary(
                    BinaryExpr {
                        op: Multiply,
                        left: Expr {
                            kind: Literal(
                                Int(
                                    IntegerLit {
                                        value: Symbol(
                                            Spur(2),
                                        ),
                                        suffix: None,
                                    },
                                ),
                            ),
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                    absolute: 0,
                                },
                                end: Position {
                                    line: 1,
                                    column: 6,
                                    absolute: 5,
                                },
                            },
                        },
                        right: Expr {
                            kind: Literal(
                                Int(
                                    IntegerLit {
                                        value: Symbol(
                                            Spur(3),
                                        ),
                                        suffix: None,
                                    },
                                ),
                            ),
                            span: Span {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                    absolute: 0,
                                },
                                end: Position {
                                    line: 1,
                                    column: 10,
                                    absolute: 9,
                                },
                            },
                        },
                    },
                ),
                span: Span {
                    start: Position {
                        line: 1,
                        column: 1,
                        absolute: 0,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                        absolute: 9,
                    },
                },
            },
        },
    ),
    span: Span {
        start: Position {
            line: 1,
            column: 1,
            absolute: 0,
        },
        end: Position {
            line: 1,
            column: 10,
            absolute: 9,
        },
    },
}
